--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -32,14 +32,63 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
-                  <div class="form-group">
-                    <ul class="list-group" id="filters">
-                      <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
-                      </li>
-                    </ul>
+                <form id="slist">
+                  <div class="form-group" id="list1">
+                    <label for="sel_1">Select Date to Diplay Table</label>
+                    <select class="form-control" id="sel1">
+                      <option>1/1/2010</option>
+                      <option>1/2/2010</option>
+                      <option>1/3/2010</option>
+                      <option>1/4/2010</option>
+                      <option>1/5/2010</option>
+                      <option>1/6/2010</option>
+                      <option>1/7/2010</option>
+                      <option>1/8/2010</option>
+                      <option>1/9/2010</option>
+                      <option>1/10/2010</option>
+                      <option>1/11/2010</option>
+                      <option>1/12/2010</option>
+                      <option>1/13/2010</option>
+                    </select>
+                  </div>
+                  <div class="form-group" id="list2">
+                    <label for="sel_2">Select State to Filter Table</label>
+                    <select class="form-control" id="sel2">
+                      <option>al</option>
+                      <option>ak</option>
+                      <option>ar</option>                      
+                      <option>az</option>
+                      <option>ca</option>
+                      <option>co</option>
+                      <option>ct</option>
+                      <option>fl</option>
+                      <option>ga</option>
+                      <option>ia</option>
+                      <option>in</option>
+                      <option>ks</option>
+                      <option>ky</option>
+                      <option>ma</option>
+                      <option>md</option>
+                      <option>mi</option>
+                      <option>mo</option>
+                      <option>ms</option>
+                      <option>nc</option>
+                      <option>nh</option>
+                      <option>nj</option>
+                      <option>nm</option>
+                      <option>ny</option>
+                      <option>oh</option>
+                      <option>on</option>
+                      <option>or</option>
+                      <option>pa</option>
+                      <option>sc</option>
+                      <option>tn</option>
+                      <option>tx</option>
+                      <option>va</option>
+                      <option>wa</option>
+                      <option>wi</option>
+                      <option>wv</option>
+                    </select>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
